remove console logs and pushed contact me down at smallest width to prevent url bar covering contact text

--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,9 @@ img[data-src] {
   }
 }
 @media only screen and (min-width: 400px) and (max-width: 600px) {
+  #contact {
+    margin-top: 100px;
+  }
 	.name {
     padding-left: 40px;
     width: 200px;
@@ -192,6 +195,9 @@ img[data-src] {
 }
 
 @media only screen and (min-width: 600px) and (max-width: 992px) {
+  #contact {
+    margin-top: 100px;
+  }
   .contactOptions {
     margin-top: 15px;
   }
